- 1.5.1 (2016-09-24)
  * Better request timeout
  * GNU-fm alternate (thanks to ejegg)

- 1.5.0 (2016-1-1)
  * Bug fixes and more (thanks to inverse)
  * Add Portuguese Brazil translations (thanks to MendelGusmao)
  * Add Huawei support
  * Add Polish translation (thanks to Grzes58)
  * Add Phone Notification to ensure scrobbles
  * Add Deezer Support
  * Add Love track and copy feature
  * Network notifications
  * Last.fm API 2.0
  * Add Czech (thanks to Michal Absolin)
  * Add Russian translation (thanks to bajituka)
  * Edit Scrobble Cache

- 1.4.9 (2015-08-09)
  * Add French translation (thanks to pierreduchemin)
  * Add Spanish translation (thanks to moshpirit)
  * Add support for Spotify (thanks to inverse)
  * Fixed support for PlayerPro (thanks to metanota)
  * Add new icon (thanks to bryansills)
  * Add German translation (thanks to herrherrmann)
  * Add new Material Design (thanks to bryansills)
  * Bug fixes and support (thanks to inverse)  

- 1.4.8 (2014-08-16)
  * Add new high-resolution icon (thanks to Tha Phlash)

- 1.4.7 (2014-07-23)
  * Add support for Amazon Music (thanks to theli-ua)
  * Add support for PlayerPro (thanks to metanota)

- 1.4.6 (2014-02-12)
  * Prevent crashes due to insufficient permissions (READ_EXTERNAL_STORAGE) (thanks to Joel Teichroeb)

- 1.4.5 (2013-03-03)
  * Support for LG Music Player (thanks to Shahar)

- 1.4.4 (2012-10-20)
  * Support for JRTStudio Android Music Player (thanks to Joseph Cooper)

- 1.4.3 (2012-08-06)
  * Yet more stability and bug fixes (thanks to Argoday)

- 1.4.2 (2012-08-05)
  * More stability and bug fixes (thanks to Argoday)

- 1.4.1 (2012-08-03)
  * Stability and bug fixes (thanks to Argoday)

- 1.4.0 (2012-08-01)
  * Updated to Android 4.0 look-n-feel (thanks to Sean O'Neil)

- 1.3.7 (2012-07-28)
  * Added support for Music2Dance2 (thanks to Argoday)
  * Added support for Rdio (thanks to stermi)
  * Stability improvements

- 1.3.6 (2012-04-21)