@@ -62,6 +62,7 @@ public class AppSettings {
     private static final String KEY_SCROBBLES = "totalScrobbles";
 
     private static final String KEY_NOTIFY_ENABLE = "enable_notify";
+    private static final String KEY_ONGOING_ENABLE = "enable_ongoing";
     private static final String KEY_SCROBBLING_ENABLE = "enable_scrobbling";
     private static final String KEY_NOWPLAYING_ENABLE = "enable_nowplaying";
 
@@ -383,6 +384,22 @@ public class AppSettings {
                 getAdvancedOptions(pow).isNotifyEnabled());
     }
 
+    public void setOnGoingEnabled(PowerOptions pow, boolean b) {
+        Editor e = prefs.edit();
+        e.putBoolean(KEY_ONGOING_ENABLE + pow.getSettingsPath(), b);
+        e.commit();
+    }
+
+    public boolean isOnGoingEnabled(PowerOptions pow) {
+        if (pow == PowerOptions.PLUGGED_IN
+                && getAdvancedOptions_raw(PowerOptions.PLUGGED_IN) == AdvancedOptions.SAME_AS_BATTERY) {
+            pow = PowerOptions.BATTERY;
+        }
+
+        return prefs.getBoolean(KEY_ONGOING_ENABLE + pow.getSettingsPath(),
+                getAdvancedOptions(pow).isOnGoingEnabled());
+    }
+
     public void setScrobblingEnabled(PowerOptions pow, boolean b) {
         Editor e = prefs.edit();
         e.putBoolean(KEY_SCROBBLING_ENABLE + pow.getSettingsPath(), b);
@@ -444,6 +461,7 @@ public class AppSettings {
         e.commit();
         if (ao != AdvancedOptions.CUSTOM
                 && ao != AdvancedOptions.SAME_AS_BATTERY) {
+            setOnGoingEnabled(pow, ao.isOnGoingEnabled());
             setNotifyEnabled(pow, ao.isNotifyEnabled());
             setScrobblingEnabled(pow, ao.isScrobblingEnabled());
             setNowPlayingEnabled(pow, ao.isNpEnabled());
