@@ -5,6 +5,9 @@
     <string name="website_url" translatable="false">https://github.com/tgwizard/sls</string>
     <string name="issues_url" translatable="false">https://github.com/tgwizard/sls/issues</string>
 	<string name="trouble_shoot" translatable="false">https://github.com/tgwizard/sls/blob/master/TroubleShooting.md</string>
+	<string name="ongoing" translatable="false">OnGoing</string>
+	<string name="nixtapeUrl" translatable="false">Nixtape URL</string>
+	<string name="gnukeboxUrl" translatable="false">Gnukebox URL</string>
     <string name="supported_musicapps" translatable="false">Spotify, Google Music, Deezer, 
 		Rhapsody/Napster, Rdio, My Cloud Player, SoundCloud, 8tracks, 
 		InfiniTracks, Squeezer, Amazon Music, Huawei, n7player, BuMP, PowerAMP, Black Player, AIMP, 
